.kubernetes/rendered/truth-ingestion/all.yaml
---
# Source: holiday-peak-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truth-ingestion-truth-ingestion
  namespace: holiday-peak-agents
  labels:
    app: truth-ingestion
spec:
  selector:
    app: truth-ingestion
    # When canary is disabled, select all pods
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
---
# Source: holiday-peak-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truth-ingestion-truth-ingestion
  namespace: holiday-peak-agents
  labels:
    app: truth-ingestion
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: truth-ingestion
      canary: "false"
  template:
    metadata:
      labels:
        app: truth-ingestion
        canary: "false"
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: truth-ingestion
      nodeSelector:
        agentpool: agents
      tolerations:
        - effect: NoSchedule
          key: workload
          operator: Equal
          value: agents
      containers:
        - name: truth-ingestion
          image: "holidaypeakhub405devacr.azurecr.io/holiday-peak-hub/truth-ingestion-dev:azd-deploy-1775349769"
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi

---
# Source: holiday-peak-service/templates/agc-routing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truth-ingestion-truth-ingestion-agc
  namespace: holiday-peak-agents
  labels:
    app: truth-ingestion
spec:
  parentRefs:
    - name: "holiday-peak-agc"
      namespace: "holiday-peak-crud"
  hostnames:
    - "esbcc8bcfyazbbdg.fz03.alb.azure.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/truth-ingestion"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/"
      backendRefs:
        - name: truth-ingestion-truth-ingestion
          port: 80
